@@ -24,48 +24,24 @@
         </paragraph>
       </description>
 
-      <source tarname="mingwrt-%-mingw32-src.tar.lzma" />
-      <licence tarname="mingwrt-%-mingw32-dev.tar.lzma" />
+      <source tarname="mingwrt-%-mingw32-src.tar.%" />
+      <licence tarname="mingwrt-%-mingw32-dev.tar.%" />
 
       <component class="dev">
         <requires eq="mingwrt-%-mingw32-dll.tar" />
         <release tarname="mingwrt-3.20-2-mingw32-dev.tar.lzma" />
-        <release tarname="mingwrt-3.20-mingw32-dev.tar.gz">
-          <source tarname="mingwrt-%-mingw32-src.tar.gz" />
-          <licence tarname="mingwrt-%-mingw32-dev.tar.gz" />
-	</release>
-        <release tarname="mingwrt-3.19-mingw32-dev.tar.gz">
-          <source tarname="mingwrt-%-mingw32-src.tar.gz" />
-          <licence tarname="mingwrt-%-mingw32-dev.tar.gz" />
-	</release>
-        <release tarname="mingwrt-3.18-mingw32-dev.tar.gz">
-          <source tarname="mingwrt-%-mingw32-src.tar.gz" />
-          <licence tarname="mingwrt-%-mingw32-dev.tar.gz" />
-	</release>
-        <release tarname="mingwrt-3.17-mingw32-dev.tar.gz">
-          <source tarname="mingwrt-%-mingw32-src.tar.gz" />
-          <licence tarname="mingwrt-%-mingw32-dev.tar.gz" />
-	</release>
+        <release tarname="mingwrt-3.20-mingw32-dev.tar.gz" />
+        <release tarname="mingwrt-3.19-mingw32-dev.tar.gz" />
+        <release tarname="mingwrt-3.18-mingw32-dev.tar.gz" />
+        <release tarname="mingwrt-3.17-mingw32-dev.tar.gz" />
       </component>
 
       <component class="dll">
         <release tarname="mingwrt-3.20-2-mingw32-dll.tar.lzma" />
-        <release tarname="mingwrt-3.20-mingw32-dll.tar.gz">
-          <source tarname="mingwrt-%-mingw32-src.tar.gz" />
-          <licence tarname="mingwrt-%-mingw32-dev.tar.gz" />
-	</release>
-        <release tarname="mingwrt-3.19-mingw32-dll.tar.gz">
-          <source tarname="mingwrt-%-mingw32-src.tar.gz" />
-          <licence tarname="mingwrt-%-mingw32-dev.tar.gz" />
-	</release>
-        <release tarname="mingwrt-3.18-mingw32-dll.tar.gz">
-          <source tarname="mingwrt-%-mingw32-src.tar.gz" />
-          <licence tarname="mingwrt-%-mingw32-dev.tar.gz" />
-	</release>
-        <release tarname="mingwrt-3.17-mingw32-dll.tar.gz">
-          <source tarname="mingwrt-%-mingw32-src.tar.gz" />
-          <licence tarname="mingwrt-%-mingw32-dev.tar.gz" />
-	</release>
+        <release tarname="mingwrt-3.20-mingw32-dll.tar.gz" />
+        <release tarname="mingwrt-3.19-mingw32-dll.tar.gz" />
+        <release tarname="mingwrt-3.18-mingw32-dll.tar.gz" />
+        <release tarname="mingwrt-3.17-mingw32-dll.tar.gz" />
       </component>
     </package>
 
@@ -84,27 +60,15 @@
         </paragraph>
       </description>
 
+      <source tarname="w32api-%-mingw32-src.tar.%" />
+      <licence tarname="w32api-%-mingw32-dev.tar.%" />
+
       <component class="dev">
-        <release tarname="w32api-3.17-2-mingw32-dev.tar.lzma" >
-          <licence tarname="w32api-%-mingw32-dev.tar.lzma" />
-          <source tarname="w32api-%-mingw32-src.tar.lzma" />
-        </release>
-        <release tarname="w32api-3.17-1-mingw32-dev.tar.lzma" >
-          <licence tarname="w32api-%-mingw32-dev.tar.lzma" />
-          <source tarname="w32api-%-mingw32-src.tar.lzma" />
-        </release>
-        <release tarname="w32api-3.16-1-mingw32-dev.tar.lzma" >
-          <licence tarname="w32api-%-mingw32-dev.tar.lzma" />
-          <source tarname="w32api-%-mingw32-src.tar.lzma" />
-        </release>
-        <release tarname="w32api-3.15-1-mingw32-dev.tar.lzma" >
-          <licence tarname="w32api-%-mingw32-dev.tar.lzma" />
-          <source tarname="w32api-%-mingw32-src.tar.lzma" />
-        </release>
-        <release tarname="w32api-3.14-mingw32-dev.tar.gz" >
-          <licence tarname="w32api-%-mingw32-dev.tar.gz" />
-          <source tarname="w32api-%-mingw32-src.tar.gz" />
-        </release>
+        <release tarname="w32api-3.17-2-mingw32-dev.tar.lzma" />
+        <release tarname="w32api-3.17-1-mingw32-dev.tar.lzma" />
+        <release tarname="w32api-3.16-1-mingw32-dev.tar.lzma" />
+        <release tarname="w32api-3.15-1-mingw32-dev.tar.lzma" />
+        <release tarname="w32api-3.14-mingw32-dev.tar.gz" />
       </component>
     </package>
 
